--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -78,16 +78,41 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jFe-Dy-3ty">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="343" id="eaH-iw-A4W"/>
+                                    <constraint firstAttribute="height" constant="285" id="Nu8-Cr-kZd"/>
                                     <constraint firstAttribute="width" constant="318" id="uVM-bT-Pdf"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Congratulations" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1T-d4-2hM">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="131" id="JnY-Ln-ZI1"/>
-                                    <constraint firstAttribute="height" constant="21" id="cir-M3-pPP"/>
+                                    <constraint firstAttribute="height" constant="21" id="TG8-4e-6eZ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="16"/>
+                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q71-Ji-ecO">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="H7c-Rm-uCk"/>
+                                    <constraint firstAttribute="width" constant="242" id="gTC-M3-7Nh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wtu-ZH-vXo">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="GPe-6A-iB6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yqw-Bk-A5C">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="ZeG-gj-f8W"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -95,7 +120,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="171" id="o3g-le-ghf"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -115,25 +140,67 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghv-nd-72X">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="gOW-bg-PLR"/>
+                                    <constraint firstAttribute="width" constant="47" id="nN7-Kf-Ovt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" size="button"/>
+                                <state key="normal" image="168-upload-photo-2.png">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="uploadButtonClicked:" destination="szq-GH-tTU" eventType="touchUpInside" id="1Mx-GY-JZV"/>
+                                </connections>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="0.0" maxValue="3" translatesAutoresizingMaskIntoConstraints="NO" id="1Pj-uR-75c">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="j3o-CP-bvw"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="sliderMoved:" destination="szq-GH-tTU" eventType="touchUpInside" id="QDR-af-O1S"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="124" id="1y3-iU-c3k"/>
+                            <constraint firstItem="Q71-Ji-ecO" firstAttribute="leading" secondItem="r1T-d4-2hM" secondAttribute="leading" type="default" id="0oU-xd-5q6"/>
                             <constraint firstItem="sbJ-gR-aeo" firstAttribute="top" secondItem="r1T-d4-2hM" secondAttribute="top" type="default" id="2fp-iY-Hoq"/>
+                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="baseline" secondItem="r1T-d4-2hM" secondAttribute="baseline" type="default" id="2le-qa-CWn"/>
+                            <constraint firstItem="yqw-Bk-A5C" firstAttribute="leading" secondItem="Wtu-ZH-vXo" secondAttribute="leading" type="default" id="621-D2-tQ1"/>
                             <constraint firstItem="SQL-3f-poU" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" type="default" id="7lI-kB-ynf"/>
-                            <constraint firstItem="SQL-3f-poU" firstAttribute="trailing" secondItem="saa-9n-xt3" secondAttribute="trailing" type="default" id="CFM-KY-OC2"/>
-                            <constraint firstItem="r1T-d4-2hM" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="63" id="N5R-HC-OgR"/>
-                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="147" id="SP7-z1-2bx"/>
-                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="trailing" secondItem="saa-9n-xt3" secondAttribute="trailing" type="default" id="Sdf-2u-II5"/>
-                            <constraint firstItem="r1T-d4-2hM" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="6" id="ZrZ-LH-8b4"/>
-                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="baseline" secondItem="r1T-d4-2hM" secondAttribute="baseline" type="default" id="oVv-8e-os6"/>
+                            <constraint firstItem="r1T-d4-2hM" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="6" id="BHt-xd-XKi"/>
+                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="178" id="GAT-xr-mDC"/>
+                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="top" secondItem="ghv-nd-72X" secondAttribute="top" type="default" id="IMF-8g-Bho"/>
+                            <constraint firstItem="SQL-3f-poU" firstAttribute="trailing" secondItem="saa-9n-xt3" secondAttribute="trailing" type="default" id="Iq3-zM-7Dv"/>
+                            <constraint firstItem="yqw-Bk-A5C" firstAttribute="trailing" secondItem="Wtu-ZH-vXo" secondAttribute="trailing" type="default" id="JpM-ya-9Kj"/>
+                            <constraint firstItem="Wtu-ZH-vXo" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="104" id="KnM-9U-4bM"/>
+                            <constraint firstItem="1Pj-uR-75c" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="115" id="SWv-U6-xxl"/>
+                            <constraint firstItem="1Pj-uR-75c" firstAttribute="trailing" secondItem="ghv-nd-72X" secondAttribute="trailing" type="default" id="fBm-Kr-auu"/>
+                            <constraint firstItem="1Pj-uR-75c" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="153" id="nys-pY-Y9L"/>
+                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="108" id="pKE-XB-imh"/>
+                            <constraint firstItem="Wtu-ZH-vXo" firstAttribute="leading" secondItem="Q71-Ji-ecO" secondAttribute="leading" type="default" id="qOo-F2-aza"/>
+                            <constraint firstItem="Q71-Ji-ecO" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="80" id="qP1-Zt-CbK"/>
+                            <constraint firstItem="Wtu-ZH-vXo" firstAttribute="trailing" secondItem="Q71-Ji-ecO" secondAttribute="trailing" type="default" id="rug-ta-obZ"/>
+                            <constraint firstItem="yqw-Bk-A5C" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="129" id="tPZ-rH-VcO"/>
+                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="centerX" secondItem="SQL-3f-poU" secondAttribute="centerX" type="default" id="uDB-jr-94C"/>
                             <constraint firstItem="SQL-3f-poU" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" type="default" id="wwh-Ey-lgo"/>
+                            <constraint firstItem="r1T-d4-2hM" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="55" id="yic-1M-xpf"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="buttonUpload" destination="ghv-nd-72X" id="2QA-3t-wMD"/>
+                        <outlet property="contentSlider" destination="1Pj-uR-75c" id="Xja-67-eze"/>
                         <outlet property="image" destination="jFe-Dy-3ty" id="9x9-xh-udn"/>
+                        <outlet property="labelCar" destination="Q71-Ji-ecO" id="NSm-t9-Eg0"/>
+                        <outlet property="labelFeatures" destination="Wtu-ZH-vXo" id="iP4-QZ-gjF"/>
                         <outlet property="labelUserName" destination="sbJ-gR-aeo" id="37u-rU-uEL"/>
                         <outlet property="selectImage" destination="wFr-hc-Azj" id="deT-zI-iSz"/>
+                        <outlet property="tagText" destination="yqw-Bk-A5C" id="5Hr-we-DsC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ziR-tI-2MG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -281,6 +348,7 @@
     <resources>
         <image name="112-group.png" width="32" height="21"/>
         <image name="154-necktie.png" width="8" height="27"/>
+        <image name="168-upload-photo-2.png" width="22" height="25"/>
         <image name="91-beaker-2.png" width="20" height="24"/>
     </resources>
     <classes>
@@ -298,10 +366,17 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MQViewController1Step2.h"/>
             <relationships>
                 <relationship kind="action" name="selectImageButtonClicked:"/>
+                <relationship kind="action" name="sliderMoved:"/>
+                <relationship kind="action" name="uploadButtonClicked:"/>
+                <relationship kind="outlet" name="buttonUpload" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="contentSlider" candidateClass="UISlider"/>
                 <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="imagePicker" candidateClass="UIImagePickerController"/>
+                <relationship kind="outlet" name="labelCar" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="labelFeatures" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="labelUserName" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="selectImage" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="tagText" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
