--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -186,9 +186,6 @@
                                     <action selector="sliderMoved:" destination="szq-GH-tTU" eventType="touchUpInside" id="QDR-af-O1S"/>
                                 </connections>
                             </slider>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="W9l-2u-ipB">
-                                <color key="color" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -206,8 +203,6 @@
                             <constraint firstItem="Wtu-ZH-vXo" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="104" id="KnM-9U-4bM"/>
                             <constraint firstItem="Bez-Xa-YG1" firstAttribute="baseline" secondItem="ghv-nd-72X" secondAttribute="baseline" type="default" id="RmW-fj-tYI"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="115" id="SWv-U6-xxl"/>
-                            <constraint firstItem="W9l-2u-ipB" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="67" id="Yvj-xT-KeT"/>
-                            <constraint firstItem="W9l-2u-ipB" firstAttribute="centerY" secondItem="SQL-3f-poU" secondAttribute="centerY" type="default" id="cCH-8s-gQN"/>
                             <constraint firstItem="Bez-Xa-YG1" firstAttribute="bottom" secondItem="ghv-nd-72X" secondAttribute="bottom" type="default" id="d3t-Uc-h4l"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="trailing" secondItem="ghv-nd-72X" secondAttribute="trailing" type="default" id="fBm-Kr-auu"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="153" id="nys-pY-Y9L"/>
@@ -223,7 +218,6 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="activityIndicator" destination="W9l-2u-ipB" id="iOc-UH-7Jn"/>
                         <outlet property="buttonUpload" destination="ghv-nd-72X" id="2QA-3t-wMD"/>
                         <outlet property="contentSlider" destination="1Pj-uR-75c" id="Xja-67-eze"/>
                         <outlet property="image" destination="jFe-Dy-3ty" id="9x9-xh-udn"/>
@@ -418,11 +412,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="commentsCellId" textLabel="PHE-BP-y6b" detailTextLabel="cd6-Z2-z3X" style="IBUITableViewCellStyleSubtitle" id="0sw-pB-YIr">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="commentsCellId" textLabel="PHE-BP-y6b" detailTextLabel="cd6-Z2-z3X" style="IBUITableViewCellStyleSubtitle" id="0sw-pB-YIr">
                                 <rect key="frame" x="0.0" y="46" width="320" height="46"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="10" y="1" width="300" height="43"/>
+                                    <rect key="frame" x="10" y="1" width="280" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PHE-BP-y6b">
@@ -438,6 +432,9 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <connections>
+                                    <segue destination="fu8-Dc-epz" kind="push" id="ufc-x6-hdX"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -450,6 +447,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sjo-iu-s3s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1502" y="172"/>
+        </scene>
+        <!--Create Lead Scene - Create Lead-->
+        <scene sceneID="zVX-CB-dyH">
+            <objects>
+                <viewController id="fu8-Dc-epz" customClass="MQCreateLeadScene" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="85g-2E-v6t">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="First Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H9C-4G-Dlb">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="Y4t-nU-Jyp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Last Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TLY-xK-zvB">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="93" id="boq-tm-OzP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qmv-Vt-z1J">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="277" id="rOH-qR-xLm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0kh-tS-oq7">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="273" id="L9z-1C-KSr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="We should capture more information in future..." lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fZJ-Kg-RiE">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="297" id="2N4-uU-KeU"/>
+                                    <constraint firstAttribute="height" constant="73" id="Aqk-ID-hu8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="0kh-tS-oq7" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="4uS-QD-FtG"/>
+                            <constraint firstItem="fZJ-Kg-RiE" firstAttribute="centerX" secondItem="Qmv-Vt-z1J" secondAttribute="centerX" type="default" id="Kip-Bt-UhX"/>
+                            <constraint firstItem="fZJ-Kg-RiE" firstAttribute="top" secondItem="85g-2E-v6t" secondAttribute="top" constant="217" id="RYQ-i9-eGd"/>
+                            <constraint firstAttribute="trailing" secondItem="Qmv-Vt-z1J" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Sd2-XA-KYH"/>
+                            <constraint firstItem="TLY-xK-zvB" firstAttribute="top" secondItem="85g-2E-v6t" secondAttribute="top" constant="116" id="ZxJ-bs-jO0"/>
+                            <constraint firstItem="0kh-tS-oq7" firstAttribute="top" secondItem="TLY-xK-zvB" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="hvS-cV-YgJ"/>
+                            <constraint firstItem="TLY-xK-zvB" firstAttribute="leading" secondItem="H9C-4G-Dlb" secondAttribute="leading" type="default" id="l1l-mZ-0e8"/>
+                            <constraint firstItem="0kh-tS-oq7" firstAttribute="leading" secondItem="TLY-xK-zvB" secondAttribute="leading" type="default" id="rsp-Mm-0Fo"/>
+                            <constraint firstItem="H9C-4G-Dlb" firstAttribute="top" secondItem="85g-2E-v6t" secondAttribute="top" constant="38" id="v1G-pV-Gc1"/>
+                            <constraint firstItem="Qmv-Vt-z1J" firstAttribute="top" secondItem="85g-2E-v6t" secondAttribute="top" constant="62" id="xq7-yE-nAe"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Create Lead" id="jdH-hn-M8b">
+                        <barButtonItem key="rightBarButtonItem" title="Go" id="n1A-Zn-Kl1"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="LastName" destination="0kh-tS-oq7" id="LZc-Xx-fTQ"/>
+                        <outlet property="Save" destination="n1A-Zn-Kl1" id="eRd-DK-YKJ"/>
+                        <outlet property="firstName" destination="Qmv-Vt-z1J" id="Ax8-MS-HOX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="esY-cz-QSW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1979" y="172"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="15">
@@ -519,6 +591,15 @@
         <image name="91-beaker-2.png" width="20" height="24"/>
     </resources>
     <classes>
+        <class className="MQCreateLeadScene" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQCreateLeadScene.h"/>
+            <relationships>
+                <relationship kind="action" name="SaveButtonClicked:"/>
+                <relationship kind="outlet" name="LastName" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="Save" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="firstName" candidateClass="UITextField"/>
+            </relationships>
+        </class>
         <class className="MQEngineerViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MQEngineerViewController.h"/>
             <relationships>
@@ -560,7 +641,6 @@
                 <relationship kind="action" name="selectNewImageButtonClicked:"/>
                 <relationship kind="action" name="sliderMoved:"/>
                 <relationship kind="action" name="uploadButtonClicked:"/>
-                <relationship kind="outlet" name="activityIndicator" candidateClass="UIActivityIndicatorView"/>
                 <relationship kind="outlet" name="buttonUpload" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="contentSlider" candidateClass="UISlider"/>
                 <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
